vendor/cdk-rs/ic-cdk/tests/compile_fail/no_generic.rs
use ic_cdk::query;

#[query]
fn method<T>(_arg: T) {}

fn main() {}
